--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.20.2",
     "@openai/agents": "^0.2.1",
     "node-fetch": "^2.7.0"
   }
