--- a/logistics/aitesting/2/env.example
+++ b/logistics/aitesting/2/env.example
@@ -1,5 +1,4 @@
-OPENAI_API_KEY=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
-WORKFLOW_ID=wf_6904f825047481909f36198a0a2a269d0687102ba226cd40
+OPENAI_API_KEY=
+WORKFLOW_ID=
 PORT=3001
-
 
